# CV-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
agents/: cv_writer.py  job_analyser.py  project_analyser.py
mcp/cv_writer/: Dockerfile  cv_mcp.py  requirements.txt
mcp/developer_stack_finder/: Dockerfile  local_projects.yaml  requirements.txt  server.py
mcp/job_analyser/: Dockerfile  requirements.txt  server.py
utils/: monitoring.py  userinput.py
