[project]
name = "job-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.3.1",
    "google-genai>=2.3.0",
    "ollama>=0.6.2",
    "openai>=2.36.0",
    "pandas>=2.3.3",
    "pydantic-ai>=1.97.0",
    "python-jobspy>=1.1.82",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "openinference-instrumentation-pydantic-ai>=0.1.0",
    "streamlit>=1.57.0",
]
